Account registration page layout issue fixed

--- a/frontend/app/SignUp/page.module.css
+++ b/frontend/app/SignUp/page.module.css
@@ -17,7 +17,8 @@
   /* top: 200%; */
   left: 50vw;
   margin-top: 10%;
-  transform:translate(-50% )
+  transform:translate(-50% );
+  width: 100vw;
 }
 /* 
 .noAuthLandingPage {
