--- a/frontend/app/_components/SignedOffLandingPage/index.module.css
+++ b/frontend/app/_components/SignedOffLandingPage/index.module.css
@@ -23,21 +23,57 @@
   margin: 0 auto;
   max-width: 1200px;
   background-color: var(--darkBg);
-
-  /* align-items: center;
-  justify-content: center;
-  border: 1px dotted green; */
-
 }
 
 .landingText {
   max-width: 1200px;
   padding: 0 1em;
-  /* margin: 0 auto; */
-  /* padding: 0 1em; */
   color: var(--fontColorDkBg);
-  /* background-color: var(--fontColorDkBg) */
 }
+
+.startButton {
+  display: flex;
+  margin: 0 auto;
+  color: var(--fontColorDkBg);
+  border: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: 1.3em;
+  align-items: center;
+  padding: 0.3em;
+  margin-top: 1em;
+}
+
+.linkStyle {
+  display: flex;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  color: var(--fontColorDkBg);
+  border: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: 1.3em;
+  align-items: center;
+  padding: 0.3em;
+  margin-top: 1em;
+  text-decoration: none;
+  width: 5em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* 
 .noAuthLandingPage {
   position: absolute;
